--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.26.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.3",
     "pipe": "^1.1.0",
