--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "enzyme": "^3.11.0",
+    "react-test-renderer": "^17.0.2"
+  }
 }
